--- a/Yetii.html
+++ b/Yetii.html
@@ -13,7 +13,7 @@
     <li>He has endless amounts of energy and love.</li>
     <li>He is always happy to play with anyone or their pets.</li>
 </ul></font></i></p>
-<IMG SRC="IMG_0026.JPG" alt="IMG26" width="400" height="400">
+<IMG SRC="yeti1.png" alt="Yeti1" width="400" height="400">
 
 <IMG SRC="IMG_0107.JPG" alt="IMG0107"  width="300" height="300">
 
