--- a/scratchs.html
+++ b/scratchs.html
@@ -19,7 +19,7 @@
     <li>Cabin Sleeps 5.</li>
     <li>Small Wood stove for small fires in the winter time.</li></ul></font></i></p>
 
-<IMG SRC="smallcabins.png" alt="smallcabin"  width="300" height="300">
+<IMG SRC="smallcabin.png" alt="smallcabin"  width="300" height="300">
 
 </body>
 </html>
