--- a/scratchs.html
+++ b/scratchs.html
@@ -22,4 +22,5 @@
 <IMG SRC="smallcabin.png" alt="smallcabin"  width="300" height="300">
 
 </body>
+    <center><a href="https://karimseifeldin.github.io/scratch.html">Back to our Homepage</a></center>
 </html>
