--- a/Actvitites.html
+++ b/Actvitites.html
@@ -17,5 +17,6 @@
     <li>We are also within 2 hours of many state parks.</li>
 </ul></font></i></p>
 <IMG SRC="sledding.jpg" alt="Sledding" width="400" height="400">
-</body>
+<center><a href="https://karimseifeldin.github.io/scratch.html">Back to our Homepage</a></center>
+    </body>
 </html>
