--- a/scratchs.html
+++ b/scratchs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<center><a href="https://karimseifeldin.github.io/scratch.html">Back to our Homepage</a></center><!DOCTYPE html>
 <html>
 <head>
     <title>Cabins</title>
@@ -20,7 +20,6 @@
     <li>Small Wood stove for small fires in the winter time.</li></ul></font></i></p>
 
 <IMG SRC="smallcabin.png" alt="smallcabin"  width="300" height="300">
-
+<center><a href="https://karimseifeldin.github.io/scratch.html">Back to our Homepage</a></center>
 </body>
-    <center><a href="https://karimseifeldin.github.io/scratch.html">Back to our Homepage</a></center>
 </html>
